# torvex-bench

./: .gitignore  LICENSE  README.md  pyproject.toml
results/: dataset_counts.json
results/manifests/: fintabnet_test_full.jsonl
sample_outputs/: 01_AAPL_AnnualReport_2024_CLEAN_sample_output.json  05_InvoiceBatch_Scanned_ImageOnly.pdf_sample_output.json
scripts/: count_dataset_splits.py  smoke_torvex_json.py
src/torvex_bench/: cli.py  normalizer.py  runner.py
src/torvex_bench/adapters/: base.py  torvex_extract_adapter.py
src/torvex_bench/datasets/: doclaynet.py  fintabnet.py  olmocr.py  olmocr_bench.py  omnidocbench.py
src/torvex_bench/exporters/: docling_eval.py  olmocr_markdown.py  omnidocbench_markdown.py
src/torvex_bench/harnesses/: docling_eval_doclaynet.py  docling_eval_fintabnet.py  official_doclaynet.py  official_fintabnet.py  official_olmocr.py  official_omnidocbench.py  olmocr_eval.py  omnidocbench_eval.py
src/torvex_bench/scorers/: table_structure.py
tests/: test_cli.py  test_doclaynet_loader.py  test_docling_eval_doclaynet.py  test_docling_eval_exporter.py  test_docling_eval_fintabnet_harness.py  test_fintabnet_loader.py  test_normalizer.py  test_official_doclaynet.py  test_official_olmocr.py  test_official_omnidocbench.py  test_olmocr_bench_loader.py  test_olmocr_eval.py  test_olmocr_loader.py  test_olmocr_markdown_exporter.py  test_omnidocbench_eval.py  test_omnidocbench_loader.py  test_omnidocbench_markdown_exporter.py  test_runner_smoke.py  test_table_structure.py  test_torvex_adapter.py
