[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "torvex-bench"
version = "0.1.0"
description = "Reproducible benchmark harness for Torvex Extract, Docling, and PPStructureV3."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Torvex Labs" }
]

dependencies = [
  "typer>=0.12.5",
  "rich>=13.7.1",
  "pydantic>=2.8.2",
  "datasets>=2.20.0",
  "tqdm>=4.66.4",
  "numpy>=1.26.4",
  "pandas>=2.2.2",
  "scipy>=1.14.0",
  "jiwer>=3.0.4",
  "pycocotools>=2.0.8",
  "psutil>=6.0.0",
  "pynvml>=11.5.3",
  "matplotlib>=3.9.0",
  "img2pdf>=0.5.1",
  "pypdfium2>=4.30.0",
  "pdfplumber>=0.11.4",
  "torvex-extract",
  "docling-eval>=1.4.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-benchmark>=4.0.0",
  "ruff>=0.6.2",
]

all = [
  "docling>=2.0.0",
]

[project.scripts]
torvex-bench = "torvex_bench.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/torvex_bench"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.uv.sources]
torvex-extract = { path = "../torvex-extract", editable = true }
